# html2text

./: .gitignore  AGENTS.md  Area.cpp  Area.h  ChangeLog.md  HTMLDriver.cpp  HTMLDriver.h  HTMLParser.yy  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac  flake.nix  format.cpp  format.h  html.h  html2text.1  html2text.cpp  html2textrc.5  iconvstream.cpp  release.sh  table.cpp
tests/: Makefile  auto=html4entities.default.out  auto=html4entities.links.out  auto=table-misrendering.default.out  auto=table-misrendering.html  auto=table-misrendering.links.out  utf-8=bold-utf-8-chars-and-zwnj.default.out  utf-8=bold-utf-8-chars-and-zwnj.links.out  utf-8=tag-with-colon-attribute.default.out  utf-8=tag-with-colon-attribute.links.out
